Fix section spacing and header styles on mobile.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -11,8 +11,10 @@
 	}
 }
 
-body.no-showcase {
-	padding-top: 100px;
+@include respond-to( 1024px ) {			
+	body.no-showcase {
+		padding-top: 100px;
+	}
 }
 
 .content-narrow {
