--- a/css/src/_gravity.scss
+++ b/css/src/_gravity.scss
@@ -18,7 +18,16 @@
 			::placeholder {
 				color: #ddd;
 			}
+
+			&.gsection {
+				margin: 30px 0 10px !important;
+
+				@include respond-to( 768px ) {
+					margin: 50px 0 15px !important;
+				}
+			}
 		}
+
 	}
 	
 	input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
